@@ -1,0 +1,22 @@
+# nehan-gravator
+
+This plugin provides shortcut tag for [gravator](http://www.gravator.com/) icon.
+
+# dependencies
+
+[Javascript-MD5](https://github.com/blueimp/JavaScript-MD5) is required to calculate md5 of email.
+
+So you must include <code>md5.js</code> in the <code>&lt;head&gt;</code> like this before using this plugin.
+
+```html
+<script type="text/javascript" src="/path/to/md5.js"></script>
+```
+
+# example
+
+Notice that close tag is not required.
+
+```html
+my gravator icon is <gravator size="64" email="someone@example.com">
+```
+
