@@ -9,6 +9,7 @@ Mark "!": change that can break compatibility with older version
 version 5.0.3
 =========================
 o new interface 'Nehan.createPagedElement' is created. more abstract layer and easy to use.
+o add plugin for gravator(nehan.gravator.js)
 
 
 version 5.0.2 2014/06/26
